--- a/nextflow.config
+++ b/nextflow.config
@@ -25,6 +25,9 @@ params {
     max_multiqc_email_size     = '25.MB'
     multiqc_methods_description = null
 
+    // Trimmer
+    trimmer                      = 'trimgalore'
+
     // Boilerplate options
     outdir                       = null
     publish_dir_mode             = 'copy'
