--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -416,12 +416,13 @@ params {
             mito_name   = "chrM"
         }
         'sacCer3' {
-            fasta       = "${params.igenomes_base}/Saccharomyces_cerevisiae/UCSC/sacCer3/Sequence/WholeGenomeFasta/genome.fa"
-            bwa         = "${params.igenomes_base}/Saccharomyces_cerevisiae/UCSC/sacCer3/Sequence/BWAIndex/version0.6.0/"
-            bowtie2     = "${params.igenomes_base}/Saccharomyces_cerevisiae/UCSC/sacCer3/Sequence/Bowtie2Index/"
-            star        = "${params.igenomes_base}/Saccharomyces_cerevisiae/UCSC/sacCer3/Sequence/STARIndex/"
-            bismark     = "${params.igenomes_base}/Saccharomyces_cerevisiae/UCSC/sacCer3/Sequence/BismarkIndex/"
-            readme      = "${params.igenomes_base}/Saccharomyces_cerevisiae/UCSC/sacCer3/Annotation/README.txt"
+            fasta       = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/EF4/Sequence/WholeGenomeFasta/genome.fa"
+            gtf         = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/EF4/Annotation/Genes/genes.gtf"
+            bwa         = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/EF4/Sequence/BWAIndex/"
+            bowtie2     = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/EF4/Sequence/Bowtie2Index/"
+            star        = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/EF4/Sequence/STARIndex/"
+            bismark     = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/EF4/Sequence/BismarkIndex/"
+            readme      = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/EF4/Annotation/README.txt"
             mito_name   = "chrM"
             macs_gsize  = "1.2e7"
         }
