hisat2 limitter added

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,8 @@
 
 // Global default params, used in configs
 params {
+    hisat2_build_memory = "8.GB"
+
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
