added swithc between aligner

--- a/nextflow.config
+++ b/nextflow.config
@@ -30,6 +30,9 @@ params {
     // Trimmer
     trimmer                      = 'trimgalore'
 
+    //Aligner
+    aligner                     = 'hisat2' // hisat2/star
+
     // Boilerplate options
     outdir                       = null
     publish_dir_mode             = 'copy'
