--- a/nextflow.config
+++ b/nextflow.config
@@ -31,7 +31,7 @@ params {
     trimmer                      = 'trimgalore'
 
     //Aligner
-    aligner                     = 'hisat2' // hisat2/star
+    aligner                     = 'star' // hisat2/star
 
     // Boilerplate options
     outdir                       = null
