--- a/nextflow.config
+++ b/nextflow.config
@@ -33,6 +33,12 @@ params {
     //Aligner
     aligner                     = 'star' // hisat2/star
 
+    //InitFASTQ
+    run_fastqc_at_start = true
+    run_fastqc_after_trim = true
+
+
+
     // Boilerplate options
     outdir                       = null
     publish_dir_mode             = 'copy'
