samtools sort prefix added

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -35,4 +35,8 @@ process {
         ext.prefix = "picard_marked"
     }
 
+    withName: 'SAMTOOLS_SORT' {
+        ext.prefix = "samtools_sorted"
+    }
+
 }
