--- a/conf/modules.config
+++ b/conf/modules.config
@@ -34,9 +34,34 @@ process {
     withName: 'PICARD_MARKDUPLICATES' {
         ext.prefix = "picard_marked"
     }
-
     withName: 'SAMTOOLS_SORT' {
         ext.prefix = "samtools_sorted"
+    }
+    withName: 'SALMON_INDEX' {
+        publishDir = [
+            path: { "${params.outdir}/salmon_index" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'GFFREAD' {
+        ext.args = '-w'
+        ext.prefix = 'transcriptome'
+        publishDir = [
+            path: { "${params.outdir}/gffread" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'SALMON_QUANT' {
+        ext.args = '--validateMappings --minAssignedFrags 1'
+        publishDir = [
+            path: { "${params.outdir}/salmon" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
     }
 
 }
