--- a/nextflow.config
+++ b/nextflow.config
@@ -31,7 +31,10 @@ params {
     trimmer                      = 'trimgalore'
 
     //Aligner
-    aligner                     = 'star' // hisat2/star
+    aligner                     = 'hisat2' // hisat2/star
+    
+    // Pseudo-aligner for transcript quantification
+    pseudo_aligner              = 'salmon' // salmon/kallisto/none
 
     //InitFASTQ
     run_fastqc_at_start = true
