--- a/nextflow.config
+++ b/nextflow.config
@@ -35,6 +35,9 @@ params {
     
     // Pseudo-aligner for transcript quantification
     pseudo_aligner              = 'salmon' // salmon/kallisto/none
+    
+    // Gene-level quantification (in addition to alignment-based approach)
+    run_gene_counts             = true // true/false - whether to run SUBREAD_FEATURECOUNTS
 
     //InitFASTQ
     run_fastqc_at_start = true
