test config added, smaller configs added

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,9 +8,6 @@
 
 // Global default params, used in configs
 params {
-    hisat2_build_memory = "8.GB"
-
-
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
@@ -69,6 +66,11 @@ params {
 
     // Schema validation default options
     validate_params            = true
+
+    // misc defaults
+    hisat2_build_memory        = "8.GB"
+    seq_center                 = null
+    save_unaligned             = false
 }
 
 // Load base.config by default for all pipelines
