--- a/nextflow.config
+++ b/nextflow.config
@@ -25,22 +25,15 @@ params {
     multiqc_methods_description = null
 
     // Trimmer
-    trimmer                      = 'trimgalore'
+    trimmer                      = 'none' // none / trimgalore / seqtk_trim
 
     //Aligner
-    aligner                     = 'hisat2' // hisat2/star
-    
-    // Pseudo-aligner for transcript quantification
-    pseudo_aligner              = 'salmon' // salmon/kallisto/none
-    
-    // Gene-level quantification (in addition to alignment-based approach)
-    run_gene_counts             = true // true/false - whether to run SUBREAD_FEATURECOUNTS
+    mode                         = 'star' // salmon / hisat2 / star
 
     //InitFASTQ
     run_fastqc_at_start = true
     run_fastqc_after_trim = true
-
-
+    mark_duplicates = true // only valid for mode hisat2/star
 
     // Boilerplate options
     outdir                       = null
@@ -56,8 +49,8 @@ params {
     version                      = false
     pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/'
     trace_report_suffix          = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')// Config options
-    config_profile_name        = null
-    config_profile_description = null
+    config_profile_name          = null
+    config_profile_description   = null
 
     custom_config_version      = 'master'
     custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
@@ -69,7 +62,6 @@ params {
 
     // misc defaults
     hisat2_build_memory        = "8.GB"
-    seq_center                 = null
     save_unaligned             = false
 }
 
