changed default to salmon

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,7 +28,7 @@ params {
     trimmer                      = 'none' // none / trimgalore / seqtk_trim
 
     //Aligner
-    mode                         = 'star' // salmon / hisat2 / star
+    mode                         = 'salmon' // salmon / hisat2 / star
 
     //InitFASTQ
     run_fastqc_at_start = true
